--- a/index.html
+++ b/index.html
@@ -154,7 +154,21 @@
 
   <!-- Footer -->
   <footer>
-    <p>&copy; 2025 From4 Generator | Developed by <span class="author">Ashwin & Animesh with collaboration with IIITDM Kurnool</span></p>
+
+    <div class="footer-project">
+      <img src="resources/from4_logo.png" alt="">
+      <br>
+      <font class="footer-text">India’s Smart Digital Addressing — Precise, Shareable, Reliable.</font>
+      <br>
+      <font class="footer-copyright">&copy; 2025 From4 Generator <br> Developed by <span class="author">Ashwin & Animesh with collaboration with IIITDM Kurnool</span></font>
+    </div>
+
+    <div class="footer-links">
+      hi
+    </div>
+
+    
+    
   </footer>
 
   <!-- JavaScript -->
