--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700;900&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" />
   <link rel="icon" type="image/png" href="../resources/from4_icon.png"/>
   <meta charset="UTF-8">
@@ -142,14 +143,6 @@
       <b><p>Coming Soon!</p></b>
       <p>Our From4 API will soon allow developers to integrate precise location identification into their apps and services. Using simple requests, you’ll be able to fetch From4 codes, coordinates, and location details programmatically — making location-based solutions faster and smarter</p>
     </section>
-
-    <!-- Settings Section -->
-    <section id="settings" class="sections" aria-labelledby="settings-title">
-      <header>
-        <h2 id="settings-title">Settings</h2>
-      </header>
-      <p>Customize your PIN generation preferences here. (More options coming soon!)</p>
-    </section>
   </main>
 
   <!-- Footer -->
@@ -164,7 +157,7 @@
     </div>
 
     <div class="footer-links">
-      hi
+      
     </div>
 
     
