--- a/app.html
+++ b/app.html
@@ -24,7 +24,7 @@
 
   <div class="header">
     <img src="resources/from4_landscape.png" alt="">
-    <span class="material-symbols-outlined">home</span>
+    <span class="material-symbols-outlined" onclick="location.href='index.html'">home</span>
   </div>
 
   <div class="content">
