--- a/index.html
+++ b/index.html
@@ -7,10 +7,38 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>From4</title>
 </head>
+<div id="loader">
+  <img src="resources/loading.gif" alt="Loading..." />
+</div>
+<style>
+  #loader {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100vh;
+  background: white;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 9999;
+}
+
+
+
+</style>
+
+<script>
+  window.addEventListener("load", function() {
+    document.getElementById("loader").style.display = "none";
+    document.getElementById("content").style.display = "block";
+  });
+</script>
+
 <div id="notification_area"></div>
 <body>
 
-<button id="getLocationBtn">Get Current Location</button>
+<button id="getLocationBtn" style="display: none;">Get Current Location</button>
 
   <h1>From4</h1>
   <input type="text" id="latByUser" placeholder="latitude">
