--- a/app.html
+++ b/app.html
@@ -1,72 +1,180 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <!-- Google Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700;900&display=swap" rel="stylesheet">
+  
+  <!-- Google Material Icons -->
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" />
+
+  <!-- External CSS -->
   <link rel="stylesheet" href="style/styleForApp.css">
+
+  <!-- Favicon -->
   <link rel="icon" type="image/png" href="resources/from4_icon.png"/>
+
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Know your From4</title>
+
+  <!-- Leaflet CSS -->
   <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
+
   <style>
+    /* Map container */
     #map {
       height: 400px;
       width: 100%;
+    }
+
+    /* Saved item style */
+    .saved-item {
+      border: 1px solid #ccc;
+      padding: 10px;
+      margin: 6px 0;
+      border-radius: 8px;
+      background: #f9f9f9;
+      font-family: "Inter", sans-serif;
+    }
+
+    .saved-item button {
+      background: #d9534f;
+      color: white;
+      border: none;
+      padding: 5px 10px;
+      margin-top: 6px;
+      border-radius: 5px;
+      cursor: pointer;
+    }
+
+    .saved-item button:hover {
+      background: #c9302c;
     }
   </style>
 </head>
 
 <body>
+  <!-- Map Section -->
   <div id="map"></div>
 
+  <!-- Header -->
   <div class="header">
     <img src="resources/from4_landscape.png" alt="">
     <span class="material-symbols-outlined" onclick="location.href='index.html'">home</span>
   </div>
 
+  <!-- Content Section -->
   <div class="content">
+    <!-- Menu -->
     <div class="content-menu">
-      <div>
+      <div onclick="changeTab('current_location')">
         <span class="material-symbols-outlined">location_on</span><br>
         Current
       </div>
-      <div>
+      <div onclick="changeTab('search_location')">
         <span class="material-symbols-outlined">search</span><br>
         Search
       </div>
-      <div>
+      <div onclick="changeTab('decode_location')">
         <span class="material-symbols-outlined">qr_code_scanner</span><br>
         Decode
       </div>
-      <div>
+      <div onclick="changeTab('saved_location')">
         <span class="material-symbols-outlined">bookmark</span><br>
         Saved
       </div>
     </div>
 
+    <!-- Main Content -->
     <div class="content-main">
-      <div class="content-info" id="current-location">
+      <!-- Current Location Tab -->
+      <div class="content-info" id="current_location" style="display: none;">
         Click the map or use the button below.
         <br>
         <button class="black-btn" onclick="fetchLocation()">Get Current Location</button>
       </div>
+
+      <!-- Search Tab -->
+      <div class="content-info" id="search_location" style="display:block">
+        <select name="search-using" id="search_from_select" class="select-style" onchange="search_from_select_change(this.value)">
+          <option value="">Search Using</option>
+          <option value="1">Coordinates</option>
+          <option value="2">Digipin</option>
+        </select>
+        <!-- Search by Coordinates -->
+        <div class="search_location_1" style="display: none;">
+          <input type="text" id="latitude" placeholder="Latitude" class="input-field"><br>
+          <input type="text" id="longitude" placeholder="Longitude" class="input-field"><br>
+          <button class="black-btn" onclick="getFrom4ByCoordinates()">Get From 4</button>
+        </div>
+        <!-- Search by Digipin -->
+        <div class="search_location_1" style="display: none;">
+          <input type="text" id="digipin" placeholder="Enter Digipin" class="input-field"><br>
+          <button class="black-btn" onclick="getFrom4ByDigipin()">Get From 4</button>
+        </div>
+        <br>
+      </div>
+
+      <!-- Decode Tab -->
+      <div id="decode_location" class="content-info" style="display:none;">
+        <input type="text" id="from4_code_to_decode_word1" placeholder="Word 1" class="input-field">
+        <input type="text" id="from4_code_to_decode_word2" placeholder="Word 2" class="input-field">
+        <input type="text" id="from4_code_to_decode_word3" placeholder="Word 3" class="input-field">
+        <input type="text" id="from4_code_to_decode_word4" placeholder="Word 4" class="input-field">
+        <button class="black-btn" onclick="decodeFrom4()">Decode From4</button>
+      </div>
+
+      <!-- Saved Tab -->
+      <div class="content-info" id="saved_location" style="display: none;">
+        <div class="saved_data_display"></div>
+      </div>
     </div>
   </div>
+
+  <!-- Result Section -->
+  <div class="result" id="result_section">
+    <p class="theResult" id="theResult">The Result</p>
+    <span class="material-symbols-outlined">content_copy</span>
+    <span class="material-symbols-outlined">share</span>
+    <span class="material-symbols-outlined" onclick="save_result()">bookmark</span>
+  </div>
+
+  <!-- Basic UI Control Scripts -->
+  <script>
+    // ✅ Tab Switching
+    function changeTab(tabId) {
+      const tabs = ['current_location', 'search_location', 'decode_location', 'saved_location'];
+      tabs.forEach(id => {
+        document.getElementById(id).style.display = (id === tabId) ? 'block' : 'none';
+      });
+    }
+
+    // ✅ Dropdown selection
+    function search_from_select_change(value) {
+      document.querySelectorAll('.search_location_1').forEach(div => div.style.display = 'none');
+      if (value === "1") {
+        document.querySelectorAll('.search_location_1')[0].style.display = 'block';
+      } else if (value === "2") {
+        document.querySelectorAll('.search_location_1')[1].style.display = 'block';
+      }
+    }
+  </script>
 
   <!-- Leaflet JS -->
   <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
 
+  <!-- Main Map + From4 Script -->
   <script type="module">
-    import { words } from './scripts/dict.js'; // must exist!
+    import { words } from './scripts/dict.js'; // Word list file must exist
 
-    // Base ranges
+    // Base Ranges
     const latRange = [2.5, 38.5];
     const longRange = [63.5, 99.5];
     const rows = 36, cols = 36;
 
+    // ✅ Divide grid into blocks
     function getBlock(lat, long, currentLatRange, currentLongRange, r, c) {
       const latStep = (currentLatRange[1] - currentLatRange[0]) / r;
       const longStep = (currentLongRange[1] - currentLongRange[0]) / c;
@@ -90,6 +198,7 @@
       };
     }
 
+    // ✅ Generate 4 words from coordinates
     function getWords(lat, long) {
       const l1 = getBlock(lat, long, latRange, longRange, rows, cols);
       const word1 = words[(l1.blockNum - 1) % words.length];
@@ -106,33 +215,93 @@
       return [word1, word2, word3, word4];
     }
 
+    // ✅ Decode function (From words → Lat/Long)
+    function decodeFrom4() {
+      const w1 = document.getElementById("from4_code_to_decode_word1").value.trim();
+      const w2 = document.getElementById("from4_code_to_decode_word2").value.trim();
+      const w3 = document.getElementById("from4_code_to_decode_word3").value.trim();
+      const w4 = document.getElementById("from4_code_to_decode_word4").value.trim();
+
+      if (!w1 || !w2 || !w3 || !w4) {
+        alert("Please enter all 4 words!");
+        return;
+      }
+
+      const i1 = words.indexOf(w1) + 1;
+      const i2 = words.indexOf(w2) + 1;
+      const i3 = words.indexOf(w3) + 1;
+      const i4 = words.indexOf(w4) + 1;
+
+      if (i1 <= 0 || i2 <= 0 || i3 <= 0 || i4 <= 0) {
+        alert("Invalid words entered!");
+        return;
+      }
+
+      // Reconstruct ranges step by step
+      const l1 = reverseBlock(i1, latRange, longRange, rows, cols);
+      const l2 = reverseBlock(i2, l1.latRange, l1.longRange, rows, cols);
+      const l3 = reverseBlock(i3, l2.latRange, l2.longRange, rows, cols);
+      const l4 = reverseBlock(i4, l3.latRange, l3.longRange, 8, 8);
+
+      // Approx midpoint as decoded lat/long
+      const lat = (l4.latRange[0] + l4.latRange[1]) / 2;
+      const lon = (l4.longRange[0] + l4.longRange[1]) / 2;
+
+      // Show result
+      document.getElementById("theResult").innerText = `${lat.toFixed(6)} ° N, ${lon.toFixed(6)} ° E`;
+
+      // Mark on map
+      marker.setLatLng([lat, lon]).bindPopup(`${w1}-${w2}-${w3}-${w4}`).openPopup();
+      map.panTo([lat, lon]);
+      map.setZoom(17);
+    }
+
+    // ✅ Reverse block finder
+    function reverseBlock(index, currentLatRange, currentLongRange, r, c) {
+      const latStep = (currentLatRange[1] - currentLatRange[0]) / r;
+      const longStep = (currentLongRange[1] - currentLongRange[0]) / c;
+
+      const blockNum = index - 1;
+      const row = Math.floor(blockNum / c);
+      const col = blockNum % c;
+
+      return {
+        latRange: [
+          currentLatRange[0] + row * latStep,
+          currentLatRange[0] + (row + 1) * latStep
+        ],
+        longRange: [
+          currentLongRange[0] + col * longStep,
+          currentLongRange[0] + (col + 1) * longStep
+        ]
+      };
+    }
+
+    // ✅ Show From4 Code
     function showFrom4(lat, long) {
       const result = getWords(lat, long);
       const myFrom4 = result.join("-");
-      console.log("Your From4 code:", myFrom4);
+      document.getElementById("theResult").innerText = myFrom4;
     }
 
-    // ✅ Initialize map globally
-    const map = L.map('map').setView([28.6139, 77.2090], 5); // New Delhi default
+    // ✅ Initialize Leaflet Map
+    const map = L.map('map').setView([28.6139, 77.2090], 5); // Default: New Delhi
     L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
       attribution: '&copy; <a href="https://www.openstreetmap.org/">OpenStreetMap</a> contributors'
     }).addTo(map);
 
-    // ✅ Marker (reusable)
+    // ✅ Marker
     const marker = L.marker([28.6139, 77.2090]).addTo(map);
 
-    // Remove default zoom
+    // Remove default zoom + add custom zoom
     map.removeControl(map.zoomControl);
-
-    // Add zoom in custom position
     L.control.zoom({ position: 'bottomright' }).addTo(map);
 
-    // ✅ Reverse geocoding
+    // ✅ Reverse Geocoding
     function getAddress(lat, lon) {
       fetch(`https://nominatim.openstreetmap.org/reverse?lat=${lat}&lon=${lon}&format=json`)
         .then(res => res.json())
         .then(data => {
-          console.log("Address:", data.display_name);
           marker.setLatLng([lat, lon]) // move marker
             .bindPopup(data.display_name)
             .openPopup();
@@ -140,22 +309,22 @@
         .catch(err => console.error("Error fetching address:", err));
     }
 
-    // ✅ Fetch location + pan map
+    // ✅ Fetch Location (Geolocation API)
     function fetchLocation() {
       if (navigator.geolocation) {
         navigator.geolocation.getCurrentPosition(
           pos => {
             const lat = pos.coords.latitude;
             const lon = pos.coords.longitude;
-            console.log("Coords:", lat, lon);
 
-            // Pan smoothly to new location
+            // Pan map
             map.panTo([lat, lon]);
             map.setZoom(17);
+
             // Add marker + address
             getAddress(lat, lon);
 
-            // Show From4 code
+            // Show From4
             showFrom4(lat, lon);
           },
           () => console.error("Failed to get location.")
@@ -163,8 +332,77 @@
       }
     }
 
-    // Expose globally for button onclick
+    // Expose globally
     window.fetchLocation = fetchLocation;
-
+    window.decodeFrom4 = decodeFrom4;
   </script>
+
+  <!-- Local Storage: Save + Load + Delete -->
+  <script>
+    // ✅ Save current result with timestamp
+    function save_result() {
+      let theResult = document.getElementById("theResult").innerText;
+      if (!theResult || theResult === "The Result") return;
+
+      let saved_data;
+      try {
+        saved_data = JSON.parse(localStorage.getItem("saved_data")) || [];
+        if (!Array.isArray(saved_data)) saved_data = [];
+      } catch (e) {
+        saved_data = [];
+      }
+
+      let entry = {
+        value: theResult,
+        date: new Date().toLocaleString()
+      };
+      saved_data.push(entry);
+
+      localStorage.setItem("saved_data", JSON.stringify(saved_data));
+      render_saved_data();
+    }
+
+    // ✅ Delete saved entry
+    function delete_saved(index) {
+      let saved_data = JSON.parse(localStorage.getItem("saved_data")) || [];
+      saved_data.splice(index, 1);
+      localStorage.setItem("saved_data", JSON.stringify(saved_data));
+      render_saved_data();
+    }
+
+    // ✅ Render saved data in UI
+    function render_saved_data() {
+      let saved_data = JSON.parse(localStorage.getItem("saved_data")) || [];
+      let container = document.querySelector(".saved_data_display");
+      container.innerHTML = "";
+
+      if (saved_data.length === 0) {
+        container.innerHTML = "<p>No saved data</p>";
+        return;
+      }
+
+      saved_data.forEach((item, index) => {
+        let div = document.createElement("div");
+        div.className = "saved-item";
+
+        div.innerHTML = `
+          <p><b>${item.value}</b></p>
+          <small>${item.date}</small><br>
+          <button onclick="delete_saved(${index})"><span class="material-symbols-outlined">delete</span></button>
+        `;
+        container.appendChild(div);
+      });
+    }
+
+    // ✅ Auto-load saved data on website load
+    window.onload = function () {
+      render_saved_data();
+    };
+
+    // ✅ Button fallback
+    function get_saved_data() {
+      render_saved_data();
+    }
+  </script>
+</body>
 </html>
