--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <link rel="stylesheet" href="style/style.css">
 </head>
 <div id="loader">
-  <img src="resources/loading.gif" alt="Loading..." />
+  <img src="resources/loader2.gif" alt="Loading..." />
 </div>
 <style>
   #loader {
@@ -47,7 +47,9 @@
       <li><a href="#what"><span class="material-symbols-outlined">info</span>About</a></li>
       <li><a href="#services"><span class="material-symbols-outlined">build</span>Services</a></li>
       <li><a href="#api" id="nav-api"><span class="material-symbols-outlined">code</span>API</a></li>
+      <li><a href="tech-doc.pdf" id="nav-doc"><span class="material-symbols-outlined">docs</span>Tech Doc</a></li>
     </ul>
+    <button id="tech_doc_btn" class="">Tech Doc</button>
     <button id="theme-toggle" class="theme-toggle" aria-label="Toggle theme">🌙</button>
   </nav>
 
@@ -180,14 +182,12 @@
 
     <div class="footer-project">
       <img src="resources/from4_logo.png" alt="">
-      <br>
-      <font class="footer-text">India’s Smart Digital Addressing — Precise, Shareable, Reliable.</font>
-      <br>
-      <font class="footer-copyright">&copy; 2025 From4 Generator <br> Developed by <span class="author">Ashwin & Animesh with collaboration with IIITDM Kurnool</span></font>
-    </div>
-
-    <div class="footer-links">
       
+    </div>
+    <div>
+        <font class="footer-text">India’s Smart Digital Addressing — Precise, Shareable, Reliable.</font>
+        <br>
+        <font class="footer-copyright">&copy; 2025 From4 Generator <br> Developed by <span class="author">Ashwin & Animesh with collaboration with IIITDM Kurnool</span></font>
     </div>
 
     
@@ -195,6 +195,11 @@
   </footer>
 
   <!-- JavaScript -->
+  <script>
+    document.getElementById("tech_doc_btn").addEventListener("click", () => {
+        window.location.href = "tech-doc.pdf";
+    });
+  </script>
   <script src="scripts/css.js"></script>
 </body>
 </html>
